--- a/TweetsCollectorService/TweetsCollectorService/appsettings.json
+++ b/TweetsCollectorService/TweetsCollectorService/appsettings.json
@@ -2,14 +2,13 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Hangfire": "Information"
     }
   },
   "AllowedHosts": "*",
   "Twitter": {
     "BaseUri": "https://api.twitter.com/",
-    "ApiKey": "IwyJlVUN7QqkhRiHqa4rnkHYw",
-    "ApiSecret": "NMkUY61xGMZwezgRiSi5WYhcXdXfXao4aQiT7BYOnqklcWEq6e",
     "BearerToken": "AAAAAAAAAAAAAAAAAAAAAIG5jgEAAAAA1urigt%2BPx%2B3d0VSIIv6qQv2BW2w%3D5z3P4oPfPscQ34hHx1ytt9LXsCp20Q05FsOn99glMjrHM2yPcm"
   }
 }
