--- a/TweetsCollectorService/TweetsCollectorService/appsettings.json
+++ b/TweetsCollectorService/TweetsCollectorService/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
   "Twitter": {
     "BaseUri": "https://api.twitter.com/",
-    "BearerToken": "AAAAAAAAAAAAAAAAAAAAAIG5jgEAAAAA1urigt%2BPx%2B3d0VSIIv6qQv2BW2w%3D5z3P4oPfPscQ34hHx1ytt9LXsCp20Q05FsOn99glMjrHM2yPcm"
+    "BearerToken": "<your bearer token>"
   }
 }
