--- a/TweetsCollectorService/TweetsCollectorService.Tests/TweetsCollectorService.Tests.csproj
+++ b/TweetsCollectorService/TweetsCollectorService.Tests/TweetsCollectorService.Tests.csproj
@@ -3,7 +3,8 @@
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
+		<Nullable>disable</Nullable>
+		<AnalysisMode>Recommended</AnalysisMode>
 		<IsPackable>false</IsPackable>
 		<Authors>Andrii Marchenko</Authors>
 		<Company>GlobalLogic (Hitachi Group)</Company>
