--- a/TweetsCollectorService/TweetsCollectorService/TweetsCollectorService.csproj
+++ b/TweetsCollectorService/TweetsCollectorService/TweetsCollectorService.csproj
@@ -26,5 +26,6 @@
 	</ItemGroup>
 	<ItemGroup>
 		<None Include="..\.editorconfig" />
+		<None Include="..\..\README.md" />
 	</ItemGroup>
 </Project>
